@@ -29,11 +29,11 @@ struct XMidiEvent;
 class XMidiEventList;
 
 // Conversion types for Midi files
-#define XMIDIFILE_CONVERT_NOCONVERSION		0
+#define XMIDIFILE_CONVERT_NOCONVERSION		4
 #define XMIDIFILE_CONVERT_MT32_TO_GM		1
 #define XMIDIFILE_CONVERT_MT32_TO_GS		2
 #define XMIDIFILE_CONVERT_MT32_TO_GS127		3
-#define XMIDIFILE_CONVERT_GM_TO_MT32		4
+#define XMIDIFILE_CONVERT_GM_TO_MT32		0
 
 #define XMIDIFILE_CONVERT_GS127_TO_GS		5
 #define XMIDIFILE_HINT_U7VOICE_MT_FILE		6
